terraform/envs/cpu/security_group.tf
resource "aws_security_group" "allow_ssh_jupyter" {
  name        = "allow_ssh_jupyter"
  description = "Allow inbound ssh and jupyter notebooks"
  
  # Inbound Jupyter notebooks
  ingress {
    from_port   = 8888
    to_port     = 8898
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  # Inbound SSH
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow outbound for everything
  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}
